plang/testing/logs/false-incorrect/53/program53.p.p.out
Error at sm2 aSQg :- ((sw (GeY3q) CY (tyq0 v))).:3:11 error: 
sm2 aSQg :- ((sw (GeY3q) CY (tyq0 v))).
          ^
Error at sm2 aSQg :- ((sw (GeY3q) CY (tyq0 v))).:3:36 error: 
sm2 aSQg :- ((sw (GeY3q) CY (tyq0 v))).
                                   ^
Error at xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).:10:55 error: 
xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).
                                                      ^
Error at xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).:10:228 error: 
xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).
                                                                                                                                                                                                                                   ^
Error at xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).:10:238 error: 
xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).
                                                                                                                                                                                                                                             ^
Error at ? (gAyin SKDT4 UX9Zp Frb O1N7, hf3g (mqSN)); g uIP zs; ((umJ0 cA); sl (q5 (YP) (KVkQ)) PIaL (vnynI); plr (MZnVg) GmqxD lt7t9 (tH8 aY (E) (KW))); mZ3 QK fV.:12:1 error: 
? (gAyin SKDT4 UX9Zp Frb O1N7, hf3g (mqSN)); g uIP zs; ((umJ0 cA); sl (q5 (YP) (KVkQ)) PIaL (vnynI); plr (MZnVg) GmqxD lt7t9 (tH8 aY (E) (KW))); mZ3 QK fV.
^