plang/testing/logs/false-incorrect/53/program53.p.p
ykw (O0GZ) (L) hkBek :- m, ((kRuJ o z; cGfHt)); pwq3X; lb Yw wj, xAFAD v3 XmB (W4) A, g52 nm P (m (Wcy) (i3Mrr)) (uORkl (nG V (qKICj t (lFHKy (IrEAY) (ORW)) t) e)).

sm2 aSQg :- ((sw (GeY3q) CY (tyq0 v))).

fIEPq (nk MG (wY)) (otKw1 Nz Xpjt mROb) V.

z8zw fDM (x (awS S T OV) MJ (HdUKO) g8) :- aDVP Km, (hIT HS (w i8EP AHO); a (R) (ncAk mvFTS n eDF (sPD (eyh6 (b5Z5 (z3) C j Lsnye)) IgxNB c5C9T))); (xOMi (XYsed) (wV1F nxfRq (Ln) FADtS Qo)), (ba (zT1 (k4g) (K) (xjU (LL)) hKp) Qa7z3 xvg (p2LAY (X) (mgi (s329a v97gf) (kHjNk (D) zRmE3 b) A l) rK Qvhh)), kkb VYW (mes) (vOje (jNNG G (xm (F3a) aIgk (cwBVU Yaw VGY) (Z)) uVNm) (jD wUEs fu (J) FTLsg) F) COK, dLp (vyo (DAtL) (h35xY (AqJ7) (a47 wDaeH (uTGL)) (M))) (YOJkC) (Lf9j) CGm; i21R diPM; c, kNyX dq WQq; v2 (uzG U z (Y5nN)).


xsU ss (t (S) V4 (vA (X47K) (Nk) Qi2Yv (GSSj5))) xiL :- ((itx (vltdR hC (Y) BESV (vzRV qP (lpaJ P0QT (T) (toTNj) ratbE) KMT)) (K4Ml) (pY (c KRr cnIQ n5zoy)) (pSyNx (GZ1) (a7r (zUEn M s o4 oYeh) p (mpaM (c3 (YyEAj)) QZlx4 D9kH))); (yA (SI)))).

? (gAyin SKDT4 UX9Zp Frb O1N7, hf3g (mqSN)); g uIP zs; ((umJ0 cA); sl (q5 (YP) (KVkQ)) PIaL (vnynI); plr (MZnVg) GmqxD lt7t9 (tH8 aY (E) (KW))); mZ3 QK fV.

